[project]
name = "romm"
description = "A beautiful, powerful, self-hosted rom manager"
license = "GNU AGPLv3"
readme = "README.md"
authors = [
  { name = "Zurdi", email = "zurdi@romm.app" },
  { name = "Arcane", email = "arcane@romm.app" },
  { name = "Adamantike", email = "adamantike@romm.app" },
]
requires-python = "^3.13"
dependencies = [
  "PyYAML == 6.0.1",
  "SQLAlchemy[mariadb-connector,mysql-connector,postgresql-psycopg] ~= 2.0",
  "Unidecode == 1.3.8",
  "aiohttp ~= 3.12",
  "alembic == 1.13.1",
  "anyio ~= 4.4",
  "authlib ~= 1.3",
  "certifi == 2024.07.04",
  "colorama ~= 0.4",
  "defusedxml ~= 0.7.1",
  "emoji == 2.10.1",
  "fastapi ~= 0.115",
  "fastapi-pagination (>=0.12.34,<0.13.0)",
  "gunicorn == 23.0.0",
  "httpx ~= 0.27",
  "itsdangerous ~= 2.1",
  "joserfc ~= 0.9",
  "passlib[bcrypt] ~= 1.7",
  "pillow ~= 10.3",
  "psycopg[c] ~= 3.2",
  "py7zr == 1.0.0rc2",
  "pydash ~= 7.0",
  "python-dotenv == 1.0.1",
  "python-magic ~= 0.4",
  "python-multipart ~= 0.0.18",
  "python-socketio == 5.11.1",
  "redis ~= 6.2",
  "rq ~= 2.1",
  "rq-scheduler ~= 0.14",
  "sentry-sdk ~= 2.19",
  "sqlakeyset ~= 2.0",
  "starlette-csrf ~= 3.0",
  "streaming-form-data ~= 1.19",
  "types-colorama ~= 0.4",
  "types-passlib ~= 1.7",
  "types-pyyaml ~= 6.0",
  "types-redis ~= 4.6",
  "ua-parser (>=1.0.1,<2.0.0)",
  "user-agents (>=2.2.0,<3.0.0)",
  "uvicorn == 0.29.0",
  "watchdog ~= 4.0",
  "websockets == 12.0",
  "yarl ~= 1.14",
  "zipfile-deflate64 ~= 0.2",
]

[project.optional-dependencies]
dev = [
  "ipdb ~= 0.13",
  "ipykernel ~= 6.29",
  "memray ~= 1.15",
  "mypy ~= 1.13",
  "pyinstrument ~= 5.0",
]
test = [
  "fakeredis ~= 2.21",
  "pytest ~= 8.3",
  "pytest-asyncio ~= 0.23",
  "pytest-env ~= 1.1",
  "pytest-mock ~= 3.12",
  "pytest-recording ~= 0.13",
]

[project.urls]
Homepage = "https://romm.app/"
Source = "https://github.com/rommapp/romm"

[tool.poetry]
package-mode = false
requires-poetry = ">=2.0"
