[project]
name = "romm"
version = "0.0.1"
description = "A beautiful, powerful, self-hosted rom manager"
authors = [
  { name = "Zurdi", email = "zurdi@romm.app" },
  { name = "Arcane", email = "arcane@romm.app" },
  { name = "Adamantike", email = "adamantike@romm.app" },
]
requires-python = ">=3.13"
readme = "README.md"
license = "GNU AGPLv3"
dependencies = [
  "PyYAML == 6.0.1",
  "SQLAlchemy[mariadb-connector,mysql-connector,postgresql-psycopg] ~= 2.0",
  "Unidecode == 1.3.8",
  "aiohttp ~= 3.12",
  "alembic == 1.13.1",
  "anyio ~= 4.4",
  "authlib ~= 1.3",
  "colorama ~= 0.4",
  "defusedxml ~= 0.7.1",
  "fastapi-pagination[sqlalchemy] ~= 0.12",
  "fastapi[standard-no-fastapi-cloud-cli] ~= 0.116",
  "gunicorn == 23.0.0",
  "httpx ~= 0.27",
  "joserfc ~= 1.2",
  "levenshtein>=0.27.1",
  "passlib[bcrypt] ~= 1.7",
  "pillow ~= 10.3",
  "psycopg[c] ~= 3.2",
  "py7zr ~= 1.0",
  "pydash ~= 7.0",
  "pytest-cov>=6.2.1",
  "python-dotenv == 1.0.1",
  "python-magic ~= 0.4",
  "python-socketio == 5.11.1",
  "redis ~= 6.2",
  "rq ~= 2.1",
  # TODO: Move back to upstream `rq-scheduler`, when support for username and SSL settings is added.
  #       Related PR: https://github.com/rq/rq-scheduler/pull/325
  "rq-scheduler @ git+https://github.com/adamantike/rq-scheduler.git@feat/script-options-username-ssl",
  "sentry-sdk ~= 2.32",
  "starlette-csrf ~= 3.0",
  "streaming-form-data ~= 1.19",
  "types-colorama ~= 0.4",
  "types-passlib ~= 1.7",
  "types-pyyaml ~= 6.0",
  "types-redis ~= 4.6",
  "user-agents ~= 2.2",
  "uvicorn ~= 0.35",
  "uvicorn-worker ~= 0.3",
  "watchdog ~= 6.0",
  "yarl ~= 1.14",
  "zipfile-inflate64 ~= 0.1",
]

[project.optional-dependencies]
dev = [
  "ipdb ~= 0.13",
  "ipykernel ~= 6.29",
  "memray ~= 1.15",
  "mypy ~= 1.13",
  "pyinstrument ~= 5.0",
]
test = [
  "fakeredis ~= 2.21",
  "pytest ~= 8.3",
  "pytest-asyncio ~= 0.23",
  "pytest-env ~= 1.1",
  "pytest-mock ~= 3.12",
  "pytest-recording ~= 0.13",
]

[project.urls]
Homepage = "https://romm.app/"
Source = "https://github.com/rommapp/romm"

[tool.uv]
package = false
